# App-watch

./: .env.example  .gitignore  AI_IMPLEMENTATION.md  API_FLOW_COORDINATES_NUCLEO.md  DEPLOYMENT_NUCLEO_SYSTEM.md  GTFS_REALTIME.md  Makefile  PROVINCE_NUCLEO_MAPPING.md  README.md  TESTING_CHECKLIST.md  VIAS_PROXIMIDAD.md  VIAS_PROXIMIDAD_PENDIENTES.md  alembic.ini  app.py  continue.md  docker-compose.yml  pyproject.toml  test_enrich_one_alert.py
FIX GTFS/: ESTADO_GTFS.md
TRANSFER_DOC/: BARCELONA_MULTIMODAL_REVIEW.md  ESTRUCTURA_PROCESO.md  FIX_TRANSFERS_MANUAL.md  PLATFORMS_AND_CORRESPONDENCES.md
adapters/: __init__.py
ai_docs/: README.md  requirement_analysis_guide.md  working_documentation.md
alembic/: env.py
core/: __init__.py  celery.py  config.py  database.py  rate_limiter.py
data/: asturias_default_platforms.json  estaciones_sin_servicio.json  revision_manual_vias.json  shapes_interpolated.json  shapes_merged.json
docs/: ACCESOS_VESTIBULOS_STATUS.md  AI_IMPLEMENTATION.md  APP_MIGRATION_INSTRUCTIONS.md  ARCHITECTURE_NETWORK_PROVINCES.md  ASTURIAS_VIAS_METRICAS.md  CORRESPONDENCIAS_Y_TRANSFERS.md  FIX_METRO_MALAGA_DUPLICATES.md  FIX_RENFE_HEADSIGNS_PLATFORMS.md  GTFS_IMPORT_VERIFICATION_20260127.md  GTFS_OPERATORS_STATUS.md  IMPORT_FEVE.md  IMPORT_PROXIMIDAD.md  METRO_IMPORT_GUIDE.md  PLAN_METRO_MALAGA_IMPORT.md  PLAN_METRO_SEVILLA_ACTUALIZACION.md  PLAN_METRO_SEVILLA_IMPORT.md  PLAN_METRO_TENERIFE_IMPORT.md  PLATFORMS_AND_CORRESPONDENCES.md  RAPTOR_ACTION_PLAN.md  RAPTOR_BLOCKING_QUESTIONS.md  RAPTOR_CODE_REVIEW.md  RAPTOR_IMPLEMENTATION_PLAN.md  RAPTOR_IN_MEMORY.md  README.md  RENFE_RT_MERGE.md  RENFE_RT_PLATFORMS_FIX.md  RESUMEN_VIAS_MALAGA.md  ROUTE_PLANNER.md  ROUTING_ALGORITHMS.md  SHAPES_FIX.md  SHAPE_OSM_INTERPOLATION.md  SHAPE_OSM_REPLACEMENT.md  (+3 more)
(+407 files in other folders)
